--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 env:
   global:
-    - DOCKER_IMAGE_NAME=iris-ml-api
+    - DOCKER_IMAGE_NAME=iris-ml-api-travisci
 
 before_install:
   # Update Docker to latest version
@@ -40,9 +40,9 @@ script:
 after_success:
   # Optional: Push to Docker Hub (uncomment and add Docker Hub credentials in Travis CI settings)
   # Add DOCKERHUB_USERNAME and DOCKERHUB_TOKEN (Personal Access Token) as environment variables in Travis CI
-  # - echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-  # - docker push $DOCKER_IMAGE_NAME:$TRAVIS_BUILD_NUMBER
-  # - docker push $DOCKER_IMAGE_NAME:latest
+   - echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+   - docker push $DOCKER_IMAGE_NAME:$TRAVIS_BUILD_NUMBER
+   - docker push $DOCKER_IMAGE_NAME:latest
   - echo "Build successful!"
 
 after_failure:
